--- a/sponsors.html
+++ b/sponsors.html
@@ -377,11 +377,11 @@
   <footer class="footer">
     <div class="footer_top" style="padding-bottom: 0px; margin-bottom: 0px;">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="row justify-content">
+          <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="footer_widget" style="padding-bottom: 0px;">
               <h3>About Us</h3>
-              <p>The New Zealand Chinese Students’ Association (NZCSA) is a charitable student society. The aim of the
+              <p style="line-height: 1.5;">The New Zealand Chinese Students’ Association (NZCSA) is a charitable student society. The aim of the
                 Association is to serve Chinese students in New Zealand by way of promoting Chinese culture and to act
                 as a bridge between the Chinese student community and the New Zealand mainstream community.</p>
             </div>
@@ -407,6 +407,13 @@
               </ul>
             </div>
           </div>
+          <div class="col-md-3  col-sm-12  col-12">
+          <div class="footer_widget">
+            <h3>Contact Us</h3>
+            <p style="margin-bottom: 0px; margin-top: 0px;"><b style="color: white;">Email</b>: info@nzcsa.com</p>
+            <img class="img-responsive" src="img/NZCSAqrcode.dib" alt="">
+          </div>
+          </div>
         </div>
       </div>
     </div>
@@ -417,16 +424,14 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-12">
                 <ul class="list-unstyled list-inline social text-center">
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i
+                  <li class="list-inline-item"><a href="https://www.facebook.com/nzcsa/"><i
                         class="fa fa-facebook"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i
-                        class="fa fa-twitter"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i
+                  <li class="list-inline-item"><a href="https://www.instagram.com/nzcsa/"><i
                         class="fa fa-instagram"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i
-                        class="fa fa-google-plus"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02" target="_blank"><i
-                        class="fa fa-envelope"></i></a></li>
+                  <li class="list-inline-item"><a href="https://www.linkedin.com/company/new-zealand-chinese-student-association" target="_blank"><i
+                        class="fa fa-linkedin"></i></a></li>
+                  <li class="list-inline-item"><a href="group.html"><i
+                        class="fa fa-wechat"></i></a></li>
                 </ul>
               </div>
               <hr>
