--- a/career.html
+++ b/career.html
@@ -139,7 +139,7 @@
                         <div class="section_title text-center mb-80">
                             <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"> At <span
                                     style="color:red;"> NZCSA </span>,</h3>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">we <span
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="color: black;">we <span
                                     style="color:red;">cherish</span> every <span style="color:red;">talents</span> you
                                 have, every input you contribute, we wish to have you in our team and let's make the
                                 Chinese
@@ -165,7 +165,7 @@
                     <div class="col-lg-5 col-md-6">
                         <div class="about_info pl-68">
                             <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">理事会 (Committee)</h4>
-                            <p class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">作为学生会的内部群体，
+                            <p class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s" style="color: black;">作为学生会的内部群体，
                                 由核心团队(<span style="color:red;">Core Team</span>)
 
                                 和七大部门(<span style="color:red;">Departemts</span>)组成。
@@ -192,7 +192,7 @@
                         <div class="section_title text-center mb-80">
                             <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"> <span
                                     style="color:red;"> Core Team </span></h4>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"><span
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="color: black;"><span
                                     style="color:red;">执行团队</span>是NZCSA理事会的中枢，除了要指导学生会日常运营，更重要的是在战略上带领和策划整个学生会向前。成员由主席团，战略顾问团队，及七个部门的部长和五个副部长组成。
                             </p>
                             <br><br>
