updated aboutus img

--- a/aboutus.html
+++ b/aboutus.html
@@ -142,8 +142,7 @@
         }
 
         .performar_area .single_performer .thumb img {
-            border-radius: 20%;
-            padding: 5%;
+            box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;        
         }
 
 
@@ -196,7 +195,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="buy_tkt">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMPe0FfRsWNF2iE6Sr6YJoTE4wxZ-UpWzRjtj2CQJUaC-FZA/viewform?usp=sf_link">Join Us</a>
+                                        <a href="https://nzcsa.wdcc.co.nz">Join Us</a>
                                     </div>
                                 </div>
                             </div>
@@ -263,7 +262,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/Summer_HR1.jpg" alt="">
+                                    <img src="img/2021team/SummerXia.png" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:summer.xia@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -291,15 +290,15 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/jennySha.jpg" alt="">
+                                    <img src="img/2021team/belindaPu.png" alt="">
                                     <div class="overlay3">
-                                        <a href="mailto:jenny.sha@nzcsa.com" class="icon" title="User Profile">
+                                        <a href="mailto:belinda.pu@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Jenny Sha</h4>
+                                    <h4>Belinda Pu</h4>
                                     <span class="title">Treasurer</span><br>
                                     <span>Department of Finance</span>
                                 </div>
@@ -308,7 +307,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/HR_Annan.jpg" alt="">
+                                    <img src="img/2021team/AnanChen.png" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:annan.chen@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -344,7 +343,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/meloGuan.png" alt="">
+                                    <img src="img/2021team/MeloGuan.jpeg" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:melo.guan@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -358,27 +357,11 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/YahuiCai.jpeg" alt="">
-                                    <div class="overlay3">
-                                        <a href="mailto:yahui.cai@nzcsa.com" class="icon" title="User Profile">
-                                            <i class="fa fa-envelope"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>YaHui Cai</h4>
-                                    <span class="title">Director</span><br>
-                                    <span>Department of Business Development</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                <div data-tilt class="thumb">
-                                    <img src="img/2021team/dorisQin.jpeg" alt="">
+                                    <img src="img/2021team/DorisQin.png" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:doris.qin@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -387,6 +370,23 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Doris Qin</h4>
+                                    <span class="title">Director</span><br>
+                                    <span>Department of Business Development</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                <div data-tilt class="thumb">
+                                    <img src="img/2021team/AnsenLiu.png" alt="">
+                                    <div class="overlay3">
+                                        <a href="mailto:ansen.liu@nzcsa.com" class="icon" title="User Profile">
+                                            <i class="fa fa-envelope"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Ansen Liu</h4>
                                     <span class="title">Associate Director</span><br>
                                     <span>Department of Business Development</span>
                                 </div>
@@ -395,7 +395,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/josephine.jpeg" alt="">
+                                    <img src="img/2021team/joseWang.png" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:josephine.wang@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -413,7 +413,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/FerryFeng.jpeg" alt="">
+                                    <img src="img/2021team/FerryFeng.png" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:ferry.feng@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -430,15 +430,15 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/KatherineZhou.jpeg" alt="">
+                                    <img src="img/2021team/chole.png" alt="">
                                     <div class="overlay3">
-                                        <a href="mailto:katherine.zhou@nzcsa.com" class="icon" title="User Profile">
+                                        <a href="mailto:chole.ji@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Katherine Zhou</h4>
+                                    <h4>Chole Ji</h4>
                                     <span class="title">Co-Director</span><br>
                                     <span>Department of Marketing</span>
                                 </div>
@@ -447,7 +447,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/brandiRuan.jpg" alt="">
+                                    <img src="img/2021team/brandiRuan.jpeg" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:brandi.ruan@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -464,7 +464,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/2021team/jamesGeng.jpg" alt="">
+                                    <img src="img/2021team/jamesGEng.png" alt="">
                                     <div class="overlay3">
                                         <a href="mailto:james.geng@nzcsa.com" class="icon" title="User Profile">
                                             <i class="fa fa-envelope"></i>
@@ -519,7 +519,7 @@
                             <h3>Join Us</h3>
                             <ul class="float">
                                 <li><a href="#">Committee</a></li>
-                                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdMPe0FfRsWNF2iE6Sr6YJoTE4wxZ-UpWzRjtj2CQJUaC-FZA/viewform?usp=sf_link">Membership</a></li>
+                                <li><a href="https://nzcsa.wdcc.co.nz">Membership</a></li>
                                 <li><a href="joinus.html">Volunteer</a></li>
                                 <li><a href="http://www.nzcsa.com/group.html">WeChat Group</a></li>
                             </ul>
