--- a/pn.html
+++ b/pn.html
@@ -305,7 +305,7 @@
                       Day 1 - Alumni Night ft. CDES
                     </h5>
                     <p>Date: Wednesday, 4 August 2021</p>
-                    <p>Time: 18:00 - 21:30</p>
+                    <p>Time: 18:30 - 21:00</p>
                     <p>
                       Location: 303-G20, City Campus, University of Auckland
                     </p>
@@ -349,7 +349,7 @@
                       Day 2 - Corporate Night
                     </h5>
                     <p>Date: Thursday, 5 August 2021</p>
-                    <p>Time: 18:00 - 22:00</p>
+                    <p>Time: 18:30 - 21:00</p>
                     <p>
                       Location: 303-G20, City Campus, University of Auckland
                     </p>
@@ -402,7 +402,7 @@
                 <div class="blog-author">
                   <div style="text-align: center">
                     <p>日期: 28/07/2021-30/07/2021</p>
-                    <p>时间: 18:00 - 21:00</p>
+                    <p>时间: 18:00 - 21:00 <span style="text-decoration: underline;">NZT</span></p>
                     <p>地点: 线上直播</p>
                   </div>
                   <br />
@@ -584,7 +584,7 @@
                   <li><i class="fa fa-envelope"></i> estella.liu@nzcsa.com</li>
                 </ul>
               </aside>
-              <aside class="single_sidebar_widget instagram_feeds">
+              <!-- <aside class="single_sidebar_widget instagram_feeds">
                 <h4 class="widget_title">Sponsors</h4>
                 <ul class="instagram_row flex-wrap" style="margin: 10%">
                   <li>
@@ -639,7 +639,7 @@
                     </a>
                   </li>
                 </ul>
-              </aside>
+              </aside> -->
             </div>
           </div>
         </div>
